@@ -1,3 +1,8 @@
+2003-07-18  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkEvent.c (Tk_HandleEvent): correct XCreateIC call for
+	TK_XIM_SPOT usage. [Bug 742660] (takahashi)
+
 2003-07-19  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/tkWinCursor.c (TkGetCursorByName): Fix bug 420510 to provide
